--- a/templates/traffective-adslot.html.twig
+++ b/templates/traffective-adslot.html.twig
@@ -11,10 +11,12 @@
  */
 #}
 <div>
-{% if format in ['skyscraper', 'billboard'] %}
-  <div id="traffective-ad-{{ format|capitalize }}" style="display: none;" class='{{ format|capitalize }}_OMS'></div>
-  <div id="traffective-ad-{{ format|capitalize }}" style="display: none;" class="{{ format|capitalize }}"></div>
-{% else %}
-  <div id="traffective-ad-{{ format|capitalize }}_{{ render_count }}" style="display: none;" class="{{ format|capitalize }}_{{ render_count }}"></div>
-{% endif %}
+  {% if format == 'native' %}
+    <div id="nativendo-ad-{{ render_count }}"></div>
+  {% elseif format in ['skyscraper', 'billboard'] %}
+    <div id="traffective-ad-{{ format|capitalize }}" style="display: none;" class='{{ format|capitalize }}_OMS'></div>
+    <div id="traffective-ad-{{ format|capitalize }}" style="display: none;" class="{{ format|capitalize }}"></div>
+  {% else %}
+    <div id="traffective-ad-{{ format|capitalize }}_{{ render_count }}" style="display: none;" class="{{ format|capitalize }}_{{ render_count }}"></div>
+  {% endif %}
 </div>
