--- a/templates/traffective-adslot.html.twig
+++ b/templates/traffective-adslot.html.twig
@@ -18,13 +18,13 @@
 <div class="{{ classes|join }}">
   {# Extract "nativendo" ads into own Drupal module #}
   {% if format == 'native' %}
-    <div id="nativendo-ad-{{ render_count }}"></div>
+    <div id="nativendo-oms-infeed-{{ render_count }}"></div>
   {% elseif format in ['skyscraper', 'halfpage'] %}
     {% if format in ['skyscraper'] %}
-      <div id="traffective-ad-{{ format|capitalize }}" style="display: none;" class='{{ format|capitalize }}_OMS'></div>
+      <div id="traffective-ad-WP{{ format|title }}" style="display: none;" class='{{ format|title }}'></div>
     {% endif %}
-    <div id="traffective-ad-{{ format|capitalize }}" style="display: none;" class="{{ format|capitalize }}"></div>
+    <div id="traffective-ad-{{ format|title }}" style="display: none;" class="{{ format|title }}"></div>
   {% else %}
-    <div id="traffective-ad-{{ format|capitalize }}_{{ render_count }}" style="display: none;" class="{{ format|capitalize }}_{{ render_count }}"></div>
+    <div id="traffective-ad-{{ format|title }}{% if format != 'mobile_pos' %}_{% endif %}{{ render_count }}" style="display: none;" class="{{ format|title }}_{{ render_count }}"></div>
   {% endif %}
 </div>
