--- a/templates/traffective-adslot.html.twig
+++ b/templates/traffective-adslot.html.twig
@@ -23,7 +23,7 @@
     {% if format in ['skyscraper'] %}
       <div id="traffective-ad-WP{{ format|title }}" style="display: none;" class='WP{{ format|title }}'></div>
     {% endif %}
-    <div id="traffective-ad-{{ format|title }}" style="display: none;" class="{{ format|title }}"></div>
+    <div id="traffective-ad-{{ format|title }}{% if format in ['halfpage'] %}Ad{% endif %}" style="display: none;" class="{{ format|title }}{% if format in ['halfpage'] %}Ad{% endif %}"></div>
   {% else %}
     <div id="traffective-ad-{{ format|title }}{% if format != 'mobile_pos' %}_{% endif %}{{ render_count }}" style="display: none;" class="{{ format|title }}_{{ render_count }}"></div>
   {% endif %}
