--- a/templates/traffective-adslot.html.twig
+++ b/templates/traffective-adslot.html.twig
@@ -25,6 +25,6 @@
     {% endif %}
     <div id="traffective-ad-{{ format|title }}{% if format in ['halfpage'] %}Ad{% endif %}" style="display: none;" class="{{ format|title }}{% if format in ['halfpage'] %}Ad{% endif %}"></div>
   {% else %}
-    <div id="traffective-ad-{{ format|title }}{% if format != 'mobile_pos' %}_{% endif %}{{ render_count }}" style="display: none;" class="{{ format|title }}_{{ render_count }}"></div>
+    <div id="traffective-ad-{{ format|title }}{% if format != 'mobile_pos' %}_{% endif %}{{ render_count }}" style="display: none;" class="{{ format|title }}{% if format != 'mobile_pos' %}_{% endif %}{{ render_count }}"></div>
   {% endif %}
 </div>
