--- a/templates/traffective-adslot.html.twig
+++ b/templates/traffective-adslot.html.twig
@@ -17,8 +17,8 @@
 ] %}
 <div class="{{ classes|join }}">
   {# Extract "nativendo" ads into own Drupal module #}
-  {% if format == 'native' %}
-    <div id="nativendo-oms-infeed-{{ render_count }}"></div>
+  {% if 'native' in format %}
+    <div id="{{ format }}-{{ render_count }}"></div>
   {% elseif format in ['skyscraper', 'halfpage'] %}
     {% if format in ['skyscraper'] %}
       <div id="traffective-ad-WP{{ format|title }}" style="display: none;" class='WP{{ format|title }}'></div>
